--- a/templates/base.html
+++ b/templates/base.html
@@ -12,17 +12,19 @@
 
 <body>
 
-  <div id="container">
+  <div id="Container">
     <header>
 
     </header>
-    <div id="main" role="main">
-
+    <div id="Main" role="main">
+        {% block content %}
+            
+        {% endblock %}
     </div>
     <footer>
 
     </footer>
-  </div> <!--! end of #container -->
+  </div> <!--! end of #Container -->
 
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
