--- a/apps/home/templates/home/index.html
+++ b/apps/home/templates/home/index.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% block header %}
+{% endblock %}
+
 {% block content %}
-<h1>Welcome</h1>
+{% endblock %}
+
+{% block footer %}
 {% endblock %}
