--- a/apps/static/less/project.less
+++ b/apps/static/less/project.less
@@ -1,8 +1,8 @@
 
-@import "bootstrap/bootstrap.less"
+@import "bootstrap/bootstrap.less";
 
 // Mixins and project variables go here
 
-@import "layout.less" // Global layout
-@import "blocks.less" // Block-level elements
-@import "states.less" // Transient and selector-level
+//@import "layout.less"; // Global layout
+//@import "blocks.less"; // Block-level elements
+//@import "states.less"; // Transient and selector-level
