--- a/puppet/modules/nginx/templates/project.conf.erb
+++ b/puppet/modules/nginx/templates/project.conf.erb
@@ -3,8 +3,8 @@ server {
     listen 80;
     server_name <%= production_domain %> *.<%= production_domain %> <%= staging_domain %><% if scope.lookupvar('machine::server_type') == "vagrant" %> localhost<% end %>;
 
-    error_log /var/log/nginx/<%= scope.lookupvar('djangoapp::full_project_name') %>.error.log;
-    access_log /var/log/nginx/<%= scope.lookupvar('djangoapp::full_project_name') %>.access.log;
+    error_log /var/log/nginx/<%= scope.lookupvar('djangoapp::project_name') %>.error.log;
+    access_log /var/log/nginx/<%= scope.lookupvar('djangoapp::project_name') %>.access.log;
 
 
     # Set proxy headers for the passthrough
